fix(ir): 修两处 IR 不确定性 + 新增 Core IR 确定性门禁
## 问题：同一份源码两次编译可能产出字节不同的 IR

「可追溯性」（OriginMap / IR hash / 回归比对 / MappingIR）全部建立在一个
从未被验证的假设上——同一份源码编译两次得到同一个 IR。审计发现该假设
当前为假，且此前没有任何测试会因此变红。

### 缺陷 1：注解参数顺序随 JVM 启动漂移

AstBuilder.visitAnnotation 用 LinkedHashMap 按源码顺序收集参数后，
末尾 Map.copyOf 转不可变——JDK 不可变 Map 的迭代序按启动期 SALT 随机化。
落点是 CoreModel.Annotation.params，挂在 Func.annotations /
Func.retAnnotations / Field.annotations / Param.annotations 四处 IR 字段，
Jackson 按迭代序输出 → 字节不同的 IR JSON。

实测（独立复现，6 次独立 JVM）：同一组键跑出 4 种顺序。

★下游 CoreLowering 的 new LinkedHashMap<>(...) 拷贝救不回来——它忠实保存
  的是一个已经乱掉的顺序（「看起来在保序，实际无效」）。

修：改用 Collections.unmodifiableMap(new LinkedHashMap<>(params))，
    既保持不可变语义，又保住插入序。

### 缺陷 2：多模块拓扑序不确定

ModuleGraph.topologicalOrder() 以 modules.keySet() 为遍历起点，而 modules
是 Map.copyOf（同样的随机迭代序）。拓扑排序在**等价解**之间的选择由起点
顺序决定 → 合并后 decls 漂移。

修：起点先按 (moduleName, version) 排序。不改变拓扑正确性——任何起点顺序
    产出的都是合法拓扑序，这里只是固定选哪一个。

## 为什么以前抓不到

不是「测试通过了」，而是**结构上不存在能触发它的样本**：实测全语料中带
≥2 个参数的注解命中数为 0。故新门禁自带触发样本。

## 新增门禁 IrDeterminismTest

- 同一 JVM 内重复编译 20 次，IR JSON 必须逐字节相同。
- ★核心守卫：注解参数顺序必须等于**源码书写顺序**。样本刻意用
  zeta→alpha→mid（与字典序不同），这样「改成按键排序」的实现也会变红——
  我们要的是源码序本身，不是任何一种稳定顺序。

比较口径（关键）：必须用 Jackson 原生序列化逐字节比，不能用
- JSONAssert（宽松模式忽略字段顺序——恰好忽略掉本缺陷）
- CanonicalJson（它对 object 键排序，会把乱序的 params 重新排齐 → 掩盖缺陷）

## 验证

- 门禁在修复前**实测变红**（IR 实际输出 {"alpha":2,"mid":3,"zeta":1}，
  源码序是 zeta,alpha,mid）。
- 变异验证：撤掉修复 → 门禁重新变红（failures=1）；恢复 → 变绿。
  即门禁在结构上**能**变红，不是假绿。
- 全量测试 1590 通过、0 失败、0 错误。